02-envoy-gateway/02-egctl-and-config-dump/manifests/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hello-base
  namespace: demo
spec:
  parentRefs:
    - name: inspect
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: helloworld
          port: 8080
